--- a/styles.css
+++ b/styles.css
@@ -1,54 +1,104 @@
 *{
+
     font-family: 'Lora', serif;
+    
     margin: 0px;
     padding: 0px;
     border: 0%;
     color: black;
     text-decoration: none;
 }
+
+@font-face {
+    font-family: 'Trajan Pro 3';
+    src: local('Trajan Pro 3 Light'), local('Trajan-Pro-3-Light'),
+        url('TrajanPro3Light.woff2') format('woff2'),
+        url('TrajanPro3Light.woff') format('woff'),
+        url('TrajanPro3Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+  }
+
 #Features{
     display:flex;
     flex-direction: column;
-    width: 98.9vw;
-}
-.Features_slot{
-    display:flex;
-    width: 98.9vw;
+    width: 99vw;
+    /* border: 2px solid red; */
+    /* margin: auto; */
     justify-content: center;
     align-items: center;
-
+    /* margin-top: 15px; */
+}
+.Features_slot{
+    /* border: 2px solid black; */
+    display:flex;
+    width: 70%;
+    justify-content: center;
+    align-items: center;
+    margin-top: 25px;
+    /* background-color:#40526a; */
+    
 }
 .text-left{
-    width: 50vw;
+    /* border: 2px solid green; */
+    width: 50%;
+    margin: auto;
     text-align: center;
-    
 }
 
 .text-left h1{
-    font-family: 'Great Vibes', cursive;
-    font-size: 4rem;
+    /* color: #2f2f2f; */
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+    font-family: 'Trajan Pro 3';
+    font-weight: 100;
+    text-align: left;
+    font-size: 3rem;
 }
 .text-left p{
-    font-size: 1.5rem;
+    /* color: white; */
+    font-family: 'Lora', serif;
+
+    text-align: left;
+
+    font-size: 1rem;
+    padding-right: 1.5rem;
+    padding:  0rem 1.5rem;
+}
+.text-right p{
+    text-align: right;
+}
+.text-right h1{
+    text-align: right;
+}
+.image-right{
+    /* border: 2px solid blue; */
+    width: 65%;
+    height: auto;
 }
 .feature-image{
-    width: 49.4vw;
+    /* border: 2px solid pink; */
+    width: 100%;
     height:auto;
+    border-radius: 50%;
 }
+
+
 #main{
     width: 99vw;
     height: 100vh;
     background-color: rgb(255, 255, 255);
 }
 #header{
-    background-color:#ffffff;
+    background-color:rgb(255, 255, 255);
+    box-shadow: 0px 2px 7px black;
     width: 99vw;
     height: 10vh;
     display: flex;
     align-items: center;
     justify-content: space-around;
     font-size: 1.2em;
-    border-bottom:1px solid #6d4932 ;
+    /* border-bottom:1px solid #6d4932 ; */
     position: fixed;
 }
 .links-left{
@@ -99,6 +149,7 @@
     margin-left: 25%;
 }
 #book-bar{
+    border-radius: 10px;
     display: flex;
     align-items: center;
     margin-top: 550px;
