--- a/CSS/rooms.css
+++ b/CSS/rooms.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    background-color:#487254;
+    background-color:#e8e8e8;
     flex-direction: column;
 }
 #room-head{
@@ -10,22 +10,28 @@
     margin-top: 110px;
     font-size: 300%;
     margin-bottom: 40px;
-    color: white;
+    color: #2f2f2f;
 }
 .room{
-    height: auto;
-    width: 1300px;
+    border-top-left-radius: 55px;
+    border-bottom-right-radius: 55px;
+    margin-top: 50px;
+    height:fit-content;
+    width: 80%;
     background-color: white;
+    border: 1px solid blue;
     display: flex;
 }
 .room-text{
     width: 50%;
-
 }
 .room-imgbox{
     width:50%;
-    height: auto;
+    height:min-content;
 }
 .room-img{
+    /* height: auto; */
     width: 100%;
+    border-top-left-radius: 55px;
+    border-bottom-right-radius: 55px;
 }
