--- a/styles.css
+++ b/styles.css
@@ -1,179 +1,150 @@
-*{
-
-    font-family: 'Lora', serif;
-    
-    margin: 0px;
-    padding: 0px;
-    border: 0%;
-    color: #2f2f2f;
-    text-decoration: none;
+* {
+  font-family: "Lora", serif;
+  margin: 0px;
+  padding: 0px;
+  border: 0%;
+  color: #2f2f2f;
+  text-decoration: none;
 }
 
 @font-face {
-    font-family: 'Trajan Pro 3';
-    src: local('Trajan Pro 3 Light'), local('Trajan-Pro-3-Light'),
-        url('TrajanPro3Light.woff2') format('woff2'),
-        url('TrajanPro3Light.woff') format('woff'),
-        url('TrajanPro3Light.ttf') format('truetype');
-    font-weight: 300;
-    font-style: normal;
-  }
-
-#Features{
-    display:flex;
-    flex-direction: column;
-    width: 99vw;
-    /* border: 2px solid red; */
-    /* margin: auto; */
-    justify-content: center;
-    align-items: center;
-    margin-top: 2em;
-}
-.Features_slot{
-    /* border: 2px solid black; */
-    display:flex;
-    width: 80%;
-    gap:10%;
-    justify-content: center;
-    align-items: center;
-    margin-top: 25px;
-    /* background-color:#40526a; */
-    
-}
-.text-left{
-    /* border: 2px solid green; */
-    width: 40%;
-    margin: auto;
-    text-align: center;
+  font-family: "Trajan Pro 3";
+  src: local("Trajan Pro 3 Light"), local("Trajan-Pro-3-Light"),
+    url("TrajanPro3Light.woff2") format("woff2"),
+    url("TrajanPro3Light.woff") format("woff"),
+    url("TrajanPro3Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
 }
 
-.text-left h1{
-    /* color: #2f2f2f; */
-    padding-right: 1.5rem;
-    padding-left: 1.5rem;
-    font-family: 'Trajan Pro 3';
-    font-weight: 100;
-    /* text-align: left; */
-    font-size: 3rem;
+#Features {
+  display: flex;
+  flex-direction: column;
+  width: 99vw;
+  justify-content: center;
+  align-items: center;
+  margin-top: 3em;
+  margin-bottom: 3em;
 }
-.text-left p{
-    /* color: white; */
-    font-family: 'Lora', serif;
-
-    /* text-align: left; */
-
-    font-size: 1rem;
-    padding-right: 1.5rem;
-    padding:  0rem 1.5rem;
+.Features_slot {
+  display: flex;
+  width: 80%;
+  gap: 10%;
+  justify-content: center;
+  align-items: center;
+  margin-top: 25px;
 }
-.text-right p{
-    /* text-align: right; */
-}
-.text-right h1{
-    /* text-align: right; */
-}
-.image-right{
-    /* border: 2px solid blue; */
-    width: 50%;
-    height: auto;
-}
-.feature-image{
-    /* border: 2px solid pink; */
-    width: 100%;
-    height:auto;
-    border-radius: 50%;
+.text-left {
+  width: 40%;
+  text-align: center;
 }
 
+.text-left h1 {
+  padding-right: 1.5rem;
+  padding-left: 1.5rem;
+  font-family: "Trajan Pro 3";
+  font-weight: 100;
+  font-size: 3rem;
+}
+.text-left p {
+  font-family: "Lora", serif;
+  font-size: 1rem;
+  padding-right: 1.5rem;
+  padding: 0rem 1.5rem;
+}
+.image-right {
+  width: 50%;
+  height: auto;
+}
+.feature-image {
+  width: 100%;
+  height: auto;
+  border-radius: 50%;
+}
 
-#main{
-    width: 99vw;
-    height: 100vh;
-    background-color: rgb(255, 255, 255);
+#main {
+  width: 99vw;
+  height: 100vh;
+  background-color: rgb(255, 255, 255);
 }
-#header{
-    background-color:rgb(255, 255, 255);
-    box-shadow: 0px 2px 7px black;
-    width: 99vw;
-    height: 10vh;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    font-size: 1.2em;
-    /* border-bottom:1px solid #6d4932 ; */
-    position: fixed;
+#header {
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 2px 7px #2f2f2f;
+  width: 99vw;
+  height: 10vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  font-size: 1.2em;
+  position: fixed;
 }
-.links-left{
-    display: flex;
-    width: 50%;
-    justify-content: space-between;
+.links-left {
+  display: flex;
+  width: 50%;
+  justify-content: space-between;
 }
-.links-right{
-    display: flex;
-    width: 13%;
-    gap:15%;
-    justify-content: flex-end;
+.links-right {
+  display: flex;
+  width: 15%;
+  gap: 15%;
+  justify-content: flex-end;
 }
-#logo{
-    height: 11vh;
-    width: auto;
+#logo {
+  height: 11vh;
+  width: auto;
 }
-.login, .signin{
-    background-color: #d7ac67;
-    color: rgb(243, 243, 243);
-    padding: 8px 12px;
-    font-weight: 600;
-    border-radius: 8%;
+.signup,
+.signin {
+  font-size:16px;
+  font-family:Arial, Helvetica, sans-serif;
+  background-color: #d7ac67;
+  color: rgb(243, 243, 243);
+  padding: 8px 12px;
+  font-weight:bolder;
+  border-radius: 8%;
+  border: 2px solid #d7ac67;
 }
-#intro{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 99vw;
-    height: 100vh;
-    background:url("Images/main.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+.signup {
+  color: #d7ac67;
+  background-color: white;
 }
-.writing-big{
-    font-family: 'Parisienne', cursive;
-    font-size: 500%;
-    margin-top: 20%;
-    margin-left: 25%;
-    height: auto;
-    width: 500px;
+#intro {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 99vw;
+  height: 100vh;
+  background: url("Images/main.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
-.writing-small{
-    color: #487254;
-    font-size: 150%;
-    width: 400px;
-    height: 100px;
-    margin-top: 5%;
-    margin-left: 25%;
+#book-bar {
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  margin-top: 550px;
+  height: 60px;
+  width: 1000px;
+  background-color: rgb(255, 255, 255);
+  justify-content: space-around;
+  border: 1px solid #2f2f2f;
 }
-#book-bar{
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    margin-top: 550px;
-    height: 60px;
-    width: 1000px;
-    background-color: rgb(255, 255, 255);
-    justify-content: space-around;
+#arrival,
+#depart {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
 }
-#arrival,#depart{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap:5px;
+#book-bar-rooms,
+#book-bar-people {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
 }
-#book-bar-rooms,#book-bar-people{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap:5px;
-}
-#book-bar>p{
-    font-size: large;
+#book-bar > p {
+  font-size: large;
 }
