--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
   /* color: #2f2f2f; */
   text-decoration: none;
 }
-h1{
+h1,h2,h3{
   font-family: "Trajan Pro 3";
 }
 
@@ -19,11 +19,16 @@ h1{
   font-weight: 300;
   font-style: normal;
 }
-
+#main{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
 #Features {
   display: flex;
   flex-direction: column;
-  width: 99vw;
+  width: 100vw;
   justify-content: center;
   align-items: center;
   margin-top: 3em;
@@ -66,14 +71,14 @@ h1{
 }
 
 #main {
-  width: 99vw;
+  width: 100vw;
   height: 100vh;
   background-color: rgb(255, 255, 255);
 }
 #header {
   background-color: rgb(255, 255, 255);
   box-shadow: 0px 2px 7px #2f2f2f;
-  width: 99vw;
+  width: 100vw;
   height: 10vh;
   display: flex;
   align-items: center;
@@ -92,7 +97,7 @@ h1{
   gap: 15%;
   justify-content: flex-end;
 }
-#logo {
+.logo {
   height: 11vh;
   width: auto;
 }
@@ -115,7 +120,7 @@ h1{
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 99vw;
+  width: 100vw;
   height: 100vh;
   background: url("Images/main.jpg");
   background-size: cover;
@@ -128,7 +133,7 @@ h1{
   align-items: center;
   margin-top: 550px;
   height: 60px;
-  width: 1000px;
+  width: 50%;
   background-color: rgb(255, 255, 255);
   justify-content: space-around;
   border: 1px solid #2f2f2f;
@@ -161,7 +166,7 @@ h1{
   /* border: 2px solid red; */
   background-color: rgb(230, 230, 230);
   margin-top: 5%;
-  width: 98vw;
+  width: 100vw;
   color: black;
 }
 .Other-Feature-list{
@@ -197,7 +202,7 @@ h1{
   justify-content: space-between;
 
 }
-li{
+.Other-Features li{
   display: inline-block;
   /* font-weight: bold; */
   /* text-align: center; */
@@ -207,7 +212,7 @@ li{
   padding-left: 7%;
   margin: 0.5%;
   /* border: 2px solid red; */
-  font-family: "Lora", serif;
+  /* font-family: "Lora", serif; */
   font-size: 1rem;
 }
 #list-2 li{
@@ -228,12 +233,13 @@ li{
   /* align-self: auto; */
   color: white;
   /* border:2px solid red; */
-  width:93vw;
+  width:fit-content;
   display: flex;
   flex-direction: row;
-  padding:3rem;
+  padding:5rem 10rem;
+  
   /* margin-top: 5%; */
-  background-color: #494d5f;
+  background-color: #333955 ;
 }
 .writeup{
   
@@ -270,4 +276,110 @@ li{
   display:flex;
   justify-content: center;
   align-items: center;
+}
+
+/** Footer  */
+
+footer{
+  background-color: #262935;
+  color:white;
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  /* border:2px solid red; */
+  padding-top:6%;
+  /* margin: auto; */
+  justify-content: center;
+  /* padding-left: 8%;
+  padding-right: 8%; */
+
+}
+
+.foot-section{
+  /* border:2px solid green; */
+  display: flex;
+  flex-direction: row;
+  width: 90%;
+  justify-content: center;
+  /* align-items: center; */
+  margin: auto;
+}
+.foot{
+  width:25%;
+  display:flex;
+  flex-direction: column;
+  padding: 0rem 1rem;
+}
+.foot h3{
+  margin-bottom: 2rem;
+}
+.foot p{
+  margin:0.5rem 0rem;
+  text-align: justify;
+}
+#foot-col1 img{
+  /* width: auto; */
+  margin: 2rem;
+  
+
+}
+#foot-col3{
+  width:20%;
+}
+#foot-col3 a{
+  margin:4px 0px;
+  color:#d7ac67
+}
+i{
+  padding-right: 10px;
+}
+p i{
+  color:#d7ac67;
+}
+footer p{
+  color:rgb(188, 188, 188);
+}
+/* 
+#foot-col4{
+
+} */
+
+form{
+  margin:2rem 0rem;
+}
+#newsletter{
+  width: 60%;
+  padding: 0.5rem;
+  padding-left:1.5rem;
+  /* border: none; */
+  border-radius: 50rem;
+  background-color: white;
+}
+button i{
+  padding: 0px;
+  color:white
+}
+button{
+  border: none;
+  background-color: #d7ac67;
+  padding: 0.5rem;
+  border-radius:0.9rem;
+}
+
+
+
+
+#copyright{
+  /* border: 2px solid blue; */
+  border-top:1px solid #d7ac67;
+  text-align: left;
+  padding: 1rem 0rem;
+}
+#copyright a{
+  color:#d7ac67;
+  font-weight: bold;
+}
+body{
+  margin:0px;
+  padding: 0px;
 }
