--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,9 @@
 * {
   font-family: "Lora", serif;
-  margin: 0px;
-  padding: 0px;
+  margin: 0%;
   border: 0%;
-  /* color: #2f2f2f; */
   text-decoration: none;
+  scroll-margin: 0;
 }
 h1,h2,h3{
   font-family: "Trajan Pro 3";
@@ -23,12 +22,14 @@ h1,h2,h3{
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-start;
+  width:99vw;
+  height: 100vh;
+  background-color: rgb(255, 255, 255);
 }
 #Features {
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
   justify-content: center;
   align-items: center;
   margin-top: 3em;
@@ -48,6 +49,7 @@ h1,h2,h3{
 }
 
 .text-left h1 {
+  color: #c79546;
   padding-right: 1.5rem;
   padding-left: 1.5rem;
   font-family: "Trajan Pro 3";
@@ -70,21 +72,16 @@ h1,h2,h3{
   border-radius: 50%;
 }
 
-#main {
-  width: 100vw;
-  height: 100vh;
-  background-color: rgb(255, 255, 255);
-}
 #header {
   background-color: rgb(255, 255, 255);
   box-shadow: 0px 2px 7px #2f2f2f;
-  width: 100vw;
+  width: 100%;
   height: 10vh;
+  position: fixed;
   display: flex;
   align-items: center;
   justify-content: space-around;
   font-size: 1.2em;
-  position: fixed;
 }
 .links-left {
   display: flex;
@@ -99,7 +96,7 @@ h1,h2,h3{
 }
 .logo {
   height: 11vh;
-  width: auto;
+  width: 15%;
 }
 .signup,
 .signin {
@@ -120,7 +117,7 @@ h1,h2,h3{
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background: url("Images/main.jpg");
   background-size: cover;
@@ -131,7 +128,8 @@ h1,h2,h3{
   border-radius: 10px;
   display: flex;
   align-items: center;
-  margin-top: 550px;
+  margin-top: 650px;
+  margin-bottom: 100px;
   height: 60px;
   width: 50%;
   background-color: rgb(255, 255, 255);
@@ -157,103 +155,71 @@ h1,h2,h3{
   font-size: large;
 }
 
-
-
-
 /* *Other Feature Box */
-
 .Other-Features{
-  /* border: 2px solid red; */
   background-color: rgb(230, 230, 230);
   margin-top: 5%;
-  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
   color: black;
 }
 .Other-Feature-list{
-  /* border: 2px solid blue; */
-  margin: 2% 6%;
-  padding: 2%;
+  margin: 5% 6%;
 }
 .Other-Feature-list-heading{
-  /* border: 2px solid green; */
-  /* text-align: center; */
   font-weight: 400;
-  padding-left: 8%;
-  /* font-size: 1.8rem; */
-  /* font-family: "Trajan Pro 3"; */
-  width: 99%;
+  margin-left: 9%;
 }
 .other-feature-box{
-  /* border: 2px solid black; */
   margin-top: 3%;
-  padding: 1%;
-  width: 97%;
+  width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   
 }
 .list{
-  /* border: 2px solid brown; */
-  width: 98%;
-  padding: 0.5%;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-
 }
 .Other-Features li{
   display: inline-block;
-  /* font-weight: bold; */
-  /* text-align: center; */
   list-style: none;
   width: 15%;
-  /* padding: 0.5%; */
   padding-left: 7%;
+  padding-top: 0.5%;
   margin: 0.5%;
-  /* border: 2px solid red; */
-  /* font-family: "Lora", serif; */
   font-size: 1rem;
 }
 #list-2 li{
   width: 20%;
-  /* font-weight: bold; */
 }
 #list-2 li span{
-  /* width: 20%; */
   font-weight: 100;
 }
-/* iframe{
-  padding: 0px;
-  margin: 0px;
-} */
+#flist-2{
+  margin-top: 1%;
+}
 /** Location box  */
-
 #location-body{
-  /* align-self: auto; */
   color: white;
-  /* border:2px solid red; */
-  width:fit-content;
+  width:100%;
   display: flex;
   flex-direction: row;
-  padding:5rem 10rem;
-  
-  /* margin-top: 5%; */
   background-color: #333955 ;
 }
 .writeup{
-  
   color: white;
   width:50%;
-  /* border: 2px solid black; */
-  /* padding:rem; */
   padding-left:10%;
-  padding-top: 4%;
+  padding-top: 8%;
 }
 .writeup p{
   font-size: 1.2rem;
-  width: 70%;
-  /* border: 2px solid red; */
+  width: 80%;
 }
 .writeup h1{
   margin:1.2rem 0rem;
@@ -262,76 +228,57 @@ h1,h2,h3{
   margin-top:8%;
 }
 .drop-down{
-  padding:1rem;
+  padding:1em;
   border-bottom:2px solid white;
   width:40%;
   font-size: 1.2rem;
 }
-.drop-down i{
-  padding-right:9px;
-}
 .map{
-  /* border:2px solid yellow; */
-  width:50%;
+  width:40%;
   display:flex;
   justify-content: center;
   align-items: center;
+  margin: 5% 5%;
 }
 
 /** Footer  */
-
 footer{
   background-color: #262935;
   color:white;
   display: flex;
   flex-direction: column;
-  width: 100vw;
-  /* border:2px solid red; */
+  width: 100%;
   padding-top:6%;
-  /* margin: auto; */
   justify-content: center;
-  /* padding-left: 8%;
-  padding-right: 8%; */
+  align-items: center;
 
 }
-
 .foot-section{
-  /* border:2px solid green; */
   display: flex;
   flex-direction: row;
   width: 90%;
   justify-content: center;
-  /* align-items: center; */
-  margin: auto;
 }
 .foot{
   width:25%;
   display:flex;
   flex-direction: column;
-  padding: 0rem 1rem;
+  margin-left: 5%;
 }
 .foot h3{
-  margin-bottom: 2rem;
+  margin-bottom: 2em;
 }
 .foot p{
-  margin:0.5rem 0rem;
+  margin:0.5em 0em;
   text-align: justify;
 }
 #foot-col1 img{
-  /* width: auto; */
-  margin: 2rem;
-  
-
-}
-#foot-col3{
-  width:20%;
+  margin: 7% 0%;
+  width: 100%;
 }
 #foot-col3 a{
   margin:4px 0px;
   color:#d7ac67
-}
-i{
-  padding-right: 10px;
 }
 p i{
   color:#d7ac67;
@@ -339,19 +286,13 @@ p i{
 footer p{
   color:rgb(188, 188, 188);
 }
-/* 
-#foot-col4{
-
-} */
-
 form{
   margin:2rem 0rem;
 }
+
 #newsletter{
-  width: 60%;
   padding: 0.5rem;
   padding-left:1.5rem;
-  /* border: none; */
   border-radius: 50rem;
   background-color: white;
 }
@@ -362,15 +303,10 @@ button i{
 button{
   border: none;
   background-color: #d7ac67;
-  padding: 0.5rem;
-  border-radius:0.9rem;
+  padding: 0.7em;
+  border-radius:2em;
 }
-
-
-
-
 #copyright{
-  /* border: 2px solid blue; */
   border-top:1px solid #d7ac67;
   text-align: left;
   padding: 1rem 0rem;
@@ -379,7 +315,6 @@ button{
   color:#d7ac67;
   font-weight: bold;
 }
-body{
-  margin:0px;
-  padding: 0px;
+#foot-col1{
+  margin-left: 0%;
 }
