--- a/styles.css
+++ b/styles.css
@@ -32,8 +32,9 @@ h1,h2,h3{
   width: 100%;
   justify-content: center;
   align-items: center;
-  margin-top: 3em;
-  margin-bottom: 3em;
+  padding-top: 3em;
+  padding-bottom: 3em;
+  background-color: #fffaf1;
 }
 .Features_slot {
   display: flex;
@@ -158,7 +159,7 @@ h1,h2,h3{
 /* *Other Feature Box */
 .Other-Features{
   background-color: rgb(230, 230, 230);
-  margin-top: 5%;
+  /* padding-top: 5%; */
   display: flex;
   flex-direction: column;
   width: 100%;
